# low_latency_logger

./: .clang-format  .clangd  .cursorrules  CMakeLists.txt  Outlines.md  README.md  Read_me.md  test_compile_ringbuffer.cc
include/: config.h  consumer.h  error.h  formatter.h  level.h  logger.h  record.h  sink.h
internal/: cacheline.h  clock.h  platform.h  ring_buffer.h
src/: clock.cpp  consumer.cpp  encoder.cpp  formatter.cpp  logger.cpp  ring_buffer.cpp  sink.cpp
tests/: latency_test.cpp  ordering_test.cpp  ring_buffer_test.cpp
